# byte-order

./: Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs  order.rs  read.rs  write.rs
